# Vanilla-Engine

./: .gitignore  CMakeLists.txt  build.sh  main.c  memcheck.sh  memlog.txt
include/: vanilla.h  vkcontext.h  vnl_config.h  vnl_ints.h
include/defs/: vnl_ints.h  vnl_macros.h
include/glfw/: window.h
include/misc/: vnl_ints.h  vnl_macros.h  vnl_status.h  vnl_structs.h  vnl_types.h
include/vnl_ds/: vnl_ilist.h  vnl_list.h
include/vulkan/: vkcontext.h
src/: vanilla.c  vkcontext.c  vnl_lists.c
src/glfw/: window.c
src/vnl_ds/: vnl_ilist.c  vnl_list.c
src/vulkan/: vkcontext.c
